LUTECE-1653 : Improvement of performances from sonar issues.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/core@52423 bab10101-e421-0410-a517-8ce0973de3ef